--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -30,7 +30,24 @@
   font-display: swap;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex-shrink: 0;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: $font-main;
   font-weight: 400 !important;
   font-size: 16px;
